# HOD-Helmet

./: .gitignore  CODE_REVIEW.md  DEEP_AUDIT_ESP32.md
android-hud-controller/: brouter2.json  settings.gradle.kts
android-hud-controller/app/: build.gradle.kts
android-hud-controller/app/src/main/: AndroidManifest.xml
android-hud-controller/app/src/main/java/com/hudhelmet/controller/: MainActivity.kt
android-hud-controller/app/src/main/java/com/hudhelmet/controller/event/: HudEventBus.kt
android-hud-controller/app/src/main/java/com/hudhelmet/controller/model/: HudModels.kt
android-hud-controller/app/src/main/java/com/hudhelmet/controller/network/: BRouterApi.kt  (+4 more)
android-hud-controller/app/src/main/res/values/: strings.xml  themes.xml
android-hud-controller/app/src/main/res/xml/: network_security_config.xml
esp32-hud-firmware/: CMakeLists.txt  README.md  build_out.txt  convert_icons.py  rewrite.py  sdkconfig  sdkconfig.defaults  sdkconfig.defauts  update_ws_esp32.py
esp32-hud-firmware/components/waveshare__esp_lcd_st7735/: .component_hash  CHECKSUMS.json  idf_component.yml
esp32-hud-firmware/main/: CMakeLists.txt  Kconfig.projbuild  display_driver.c  display_driver.h  font8x8.h  font_16x24.h  font_48x80.h  http_server.c  http_server.h  hud_renderer.c  hud_renderer.h  hud_stream.c  hud_stream.h  icons.c  icons.h  idf_component.yml  main.c  vn_nfc_table.h  wifi_manager.c  wifi_manager.h
esp32-hud-firmware/main/ui/: lv_font_vn_12.c  lv_font_vn_16.c  lv_font_vn_24.c  ui.c  ui.h
hud_screen/: SquareLine_Project.sll  SquareLine_Project.spj  project.info
(+19 files in other folders)
